--- a/index.html
+++ b/index.html
@@ -35,3 +35,28 @@ height: auto;}
 <li><a href="https://www.facebook.com">Facebook</a></li> 
 <li><a href="https://bookzz.org//">Free Electronic library</a></li>
 </ul>
+<h> My City </h>
+ <head>
+    <style type="text/css">
+      html, body { height: 100%; margin: 0; padding: 0; }
+      #map { height: 100%; }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+    <script type="text/javascript">
+
+var map;
+function initMap() {
+  map = new google.maps.Map(document.getElementById('map'), {
+    center: {lat: 27.187721, lng: 31.168342},
+    zoom: 8
+  });
+}
+
+    </script>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3ZWyUALfMRQskyA-9_0xpxaayH7AoLZI&callback=initMap">
+    </script>
+  </body>
+
